# lamella

./: .dockerignore  .env.example  .gitattributes  .gitignore  ADD-LICENSE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.legacy  NOTICE  README.md  SECURITY.md  TRADEMARK.md  docker-compose.unraid.yml  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml  script.js  simplefin_account_map.yml.example  styles.css  trademark.html
.github/: FUNDING.yml
.github/workflows/: docker-publish-base.yml  docker-publish.yml
config/: personal_categories.yml  schedule_c_lines.yml  schedule_f_lines.yml  vehicle_categories.yml
docs/: configuration.md  inventory.md  quickstart.md  troubleshooting.md
docs/adr/: 0001-ledger-as-source-of-truth.md  0002-in-place-rewrites-default.md  0003-lamella-metadata-namespace.md  0004-bean-check-after-every-write.md  0005-htmx-endpoints-return-partials.md  0006-long-running-ops-as-jobs.md  0007-entity-first-account-hierarchy.md  0008-unconditional-dedup.md  0009-card-binding-as-hypothesis.md  0010-rules-are-signals-not-commands.md  0011-autocomplete-everywhere.md  0012-multi-agent-via-ruflo-mcp.md  0013-workers-verify-own-commits.md  (+54 more)
ledger.demo/: README.md  accounts.bean  commodities.bean  connector_accounts.bean  connector_budgets.bean  connector_config.bean  connector_links.bean  connector_overrides.bean  connector_rules.bean  connector_transfers.bean  events.bean  main.bean  manual_transactions.bean  mileage_summary.bean  prices.bean  simplefin_transactions.bean
migrations/: 001_init.sql  002_phase2.sql  003_phase3.sql  004_phase4.sql  005_phase5.sql  006_phase6.sql  007_phase7.sql  008_phase8_receipts.sql  009_phase9_registry.sql  010_phase9b_loans.sql  011_phase9c_vehicles_properties.sql  012_phase9d_mileage_splits.sql  013_phase9e_loan_account_paths.sql  014_phase9f_loan_balance_anchors.sql  015_phase10_property_values.sql  016_phase10_vehicle_values.sql  017_receipt_paperless_hash.sql  018_classification_rules_added_at.sql  019_simplefin_discovered_accounts.sql  020_business_cache.sql  021_phase11_unified_staging.sql  022_notes_active_window.sql  023_vector_embeddings.sql  024_paperless_writeback.sql  025_account_classify_context.sql  026_entity_classify_context.sql  027_classify_audit.sql  028_projects.sql  029_project_continuations.sql  030_vector_index_runs.sql  031_mileage_rates.sql  032_mileage_primary.sql  033_mileage_commuting_and_substantiation.sql  034_vehicle_data_health.sql  035_user_ui_state.sql  036_vehicle_identity_and_elections.sql  037_schedule_c_part_iv_supplementary.sql  038_vehicle_fuel_log.sql  039_vehicle_credits_renewals_allocation.sql  040_jobs.sql  (+28 more)
scripts/: add_license_headers.py  generate_demo.py
tests/: __init__.py  _weasy.py  conftest.py  test_ai_audit_link_resolution.py  test_ai_classify.py  test_ai_classify_lineage.py  test_ai_decisions_log.py  test_ai_enricher.py  test_ai_gating.py  test_ai_note_parse.py  test_ai_receipt_match.py  test_api_txn.py  test_api_txn_deposit_skip_unresolved_source.py  test_append_source_paired_meta.py  test_ask_ai_graceful_no_source.py  test_ask_ai_route.py  test_audit.py  test_audit_portfolio.py  test_auth.py  test_auth_security.py  test_auto_link_skips_ambiguous.py  test_auto_link_threshold_shared.py  test_bean_snapshot.py  test_beancount_reader.py  test_binding_loader.py  test_binding_reconstruct.py  test_binding_writer.py  test_budgets_alerts.py  test_budgets_crud.py  test_budgets_progress.py  test_bulk_apply.py  test_bulk_ask_ai_fix.py  test_bulk_classify_priority.py  test_business_drilldowns.py  test_business_expenses_route.py  test_card_swap_smoke.py  test_classifier.py  test_classify_account_extension.py  test_classify_group.py  test_classify_open_date_validation.py  (+280 more)
(+774 files in other folders)
